@@ -3,7 +3,7 @@
 <platform version="3">
 	
 <config id="General">
-	<prop id="coordinates" value="yes"></prop>
+	<prop id="network/coordinates" value="yes"></prop>
 </config>	
  <AS  id="AS0"  routing="Vivaldi">
 	<host id="100030591" coordinates="25.5 9.4 1.4" power="1500000000.0" />
